Fixed release pages with broken layouts.
git-svn-id: https://svn.apache.org/repos/asf/continuum/trunk@1662889 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/webapp/css/continuum.css
+++ b/continuum-webapp/src/main/webapp/css/continuum.css
@@ -53,3 +53,16 @@ td.tdLabel {
   white-space: -o-pre-wrap;
   word-wrap: break-word;
 }
+
+table.releasePhases {
+  width: 100%;
+}
+table.releasePhases th {
+  text-align: left;
+}
+table.releasePhases td:nth-child(1) {
+  text-align: center;
+}
+table.releasePhases td:nth-child(2) {
+  width: 100%;
+}
